--- a/index.css
+++ b/index.css
@@ -10,6 +10,10 @@ body {
   height: 5rem;
   justify-content: space-between;
   align-items: center;
+  font-size: 2rem;
+}
+.replay {
+  font-size: 2rem;
 }
 .container {
   width: 100vw;
